[tool.poetry]
name = "securedrop-docs"
description = "SecureDrop documentation for journalists, sources and administrators"
authors = ["SecureDrop team <securedrop@freedom.press>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^8.1.3"
sphinx-autobuild = "^2024.10.3"
sphinx-rtd-theme = "^3.0.2"
